syntax = "proto3";

package chef.automate.domain.dex;
option go_package = "github.com/chef/automate/api/config/dex";

import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";

import "google/protobuf/wrappers.proto";

message ConfigRequest {
  option (chef.automate.api.service_config) = {name: "automate-dex"};

	reserved 1 to 2;

	V1 v1 = 3;

	message V1 {
		System sys = 1;
		Service svc =  2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			Log log = 2;
			Service service = 3;
			Grpc grpc = 4;
			Storage storage = 5;
			Expiry expiry = 6;
			Bootstrap bootstrap = 7;
			Connectors connectors = 8;
			chef.automate.infra.config.TLSCredentials tls = 9;
			Disclosure disclosure = 10;
			Banner banner = 11;

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10116, protocol: "https" } ];
				google.protobuf.StringValue external_fqdn = 3;
			}
		}

		message Service {
		}

		message Log {
			google.protobuf.StringValue level = 1;
		}

		message Storage {
			reserved 3 to 4;
			google.protobuf.StringValue database = 1;
			google.protobuf.StringValue user = 2;
		}

		message Grpc {
			google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
			google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "grpc", default: 10117, protocol: "grpc" } ];
		}

		message Expiry {
			google.protobuf.StringValue signing_keys = 1;
			google.protobuf.StringValue id_tokens = 2;
		}

		message Bootstrap {
			google.protobuf.BoolValue insecure_admin = 1;
		}

		message Connectors {
			Google google = 1;
			Ldap ldap = 2;
			Saml saml = 3;
			Msad_Ldap msad_ldap = 4;
			google.protobuf.BoolValue disable_local_users = 5;
		}

		message Google {
			google.protobuf.StringValue client_id = 1;
			google.protobuf.StringValue client_secret = 2;
		}

		message Ldap {
			google.protobuf.StringValue ca_contents = 1;
			google.protobuf.StringValue host = 2;
			google.protobuf.StringValue bind_dn = 3;
			google.protobuf.StringValue bind_password = 4 [(chef.automate.api.secret) = { name: "ldap_password" }];
			google.protobuf.StringValue base_user_search_dn = 5;
			google.protobuf.StringValue user_query_filter = 6;
			google.protobuf.StringValue username_attr = 7;
			google.protobuf.StringValue user_id_attr = 8;
			google.protobuf.StringValue email_attr = 9;
			google.protobuf.StringValue user_display_name_attr = 10;
			google.protobuf.StringValue base_group_search_dn = 11;
			google.protobuf.StringValue group_query_filter = 12;
			google.protobuf.StringValue filter_groups_by_user_attr = 13;
			google.protobuf.StringValue filter_groups_by_user_value = 14;
			google.protobuf.StringValue group_display_name_attr = 15;
			google.protobuf.BoolValue insecure_no_ssl = 16;
		}

		message Msad_Ldap {
			google.protobuf.StringValue ca_contents = 1;
			google.protobuf.StringValue host = 2;
			google.protobuf.StringValue bind_dn = 3;
			google.protobuf.StringValue bind_password = 4 [(chef.automate.api.secret) = { name: "msad_password" }];
			google.protobuf.StringValue base_user_search_dn = 5;
			google.protobuf.StringValue base_group_search_dn = 6;
			google.protobuf.StringValue user_query_filter = 7;
			google.protobuf.StringValue group_query_filter = 8;
			google.protobuf.StringValue username_attr = 9;
			google.protobuf.StringValue user_id_attr = 10;
			google.protobuf.StringValue email_attr = 11;
			google.protobuf.StringValue user_display_name_attr = 12;
			google.protobuf.StringValue filter_groups_by_user_attr = 13;
			google.protobuf.StringValue filter_groups_by_user_value = 14;
			google.protobuf.StringValue group_display_name_attr = 15;
			google.protobuf.BoolValue insecure_no_ssl = 16;
		}

		message Saml {
			google.protobuf.StringValue ca_contents = 1;
			google.protobuf.StringValue sso_url = 2;
			google.protobuf.StringValue email_attr = 3;
			google.protobuf.StringValue username_attr = 4;
			google.protobuf.StringValue groups_attr = 5;
			google.protobuf.StringValue entity_issuer = 6;
			google.protobuf.StringValue name_id_policy_format = 7;
			repeated string allowed_groups = 8;
		}

		message Disclosure {
			google.protobuf.BoolValue show = 1;
			google.protobuf.StringValue disclosure_message = 2;
		}

		message Banner {
			google.protobuf.BoolValue show = 1;
			google.protobuf.StringValue message = 2;
			google.protobuf.StringValue background_color = 3;
			google.protobuf.StringValue text_color = 4;
		}
	}
}
